
	* doc/Makefile.am: Fix a small problem in man page installation.
	* configure.in: Remove some redundant path definitions. Fix PACKAGE_URL
	declaration.
	* pixmaps/Makefile.am: Use PACKAGE_PIXMAPS_DIR directly.
	* Makefile.am: Use docdir directly.
	* src/Makefile.am: Move PACKAGE_DOC_DIR definition here. It is only used
	in source code and no other place.
	* .gitignore: Ignore all .gmo files.

2010-01-15  Onkar Shinde  <onkarshinde@gmail.com>

	* doc/Makefile.am: Better handling of installation of examples and manpage.
	* po/*: Spanish translation.

2009-12-29  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in: Define a variable if gtksourceview version is >= 2.8.
	* src/gui-editor.c: Improve the change by Sridhar to use different
	methods based on gtksourceview version.
	* src/interface.c: Use gtk_show_uri, in the hook for about dialog,
	when available (GTK+ >= 2.14.0).
	* configure.in, src/interface.c, src/asm-listing.c: Define website url
	in configure.in and use it everywhere instead of hard coded value.
	* src/gui-editor.c: Print website url in footer. Now that we have a footer
	reduce bottom margin.
	* po/*: Updated as per latest changes in code.

2009-12-28  Sridhar Ratnakumar <srid@nearfar.org>

	* src/gui-editor.c: Fix deprecation warning from GtkSourceView

2009-12-28  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in: Gettext version updated to 0.17. Removed a bunch of
	redundant declarations.
	* src/main.c: Change variables in gettext calls to match changes in
	configure.in.
	* src/Makefile.am: Fix setting of variable LOCALEDIR.
	* ABOUT-NLS, config.rpath, m4/*, po/Makefile.in.in, po/Makevars.template:
	Added/updated by gettextize.
	* src/interface.c: Fixed some translatable strings.
	* po/gnusim8085.pot: Auto update. Also fixed copyright in header.
	* po/LINGUAS, po/gu.po: Add initial Gujarati translation by Kartik Mistry.
	* po/Makefile.in.in: Clean up .gmo files in distclean target.
	* AUTHORS: Add Kartik to translators list.
