@@ -30,7 +30,6 @@
 #include <string.h>             /* for memset */
 
 #define _(String) gettext (String)
-#define N_(String) String
 
 G_BEGIN_DECLS
 /* 16bit Address, 8bit Data */
